cleaned up whitespace in code and fixed image file path

--- a/WebFundamentals/CSS/Displaying_Blocks/styles.css
+++ b/WebFundamentals/CSS/Displaying_Blocks/styles.css
@@ -8,9 +8,10 @@
     padding: 20px;
     width: 755px;
     height: 755px;
-
-
 }
+    #wrapper #header_image {
+        background-color: white;
+    }
 
 #header {
     height: 100px;
@@ -25,8 +26,10 @@
     }
 
     #header img {
-        height: 100px;
+        height: 80px;
         display: inline-block;
+        margin-top: 20px;
+        background-color: white;
         
     }
 
@@ -38,16 +41,16 @@
 
     #main_content img {
         height: 100px;
-        border: 2px solid black;
+        border: 5px solid black;
         padding: 10px;
-        margin: 10px;
+        margin: 5px;
     
     }
 
     #main_content .blue_background {
-        background-color: lightskyblue;
+        background-color: #82b4ee;
 
     }
     #main_content .pink_background {
-        background-color: lightpink;
+        background-color: #f36870;
     }
